--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<!-- links to stylesheets and bootstrap -->
-    <link rel="stylesheet" href="style2.css">
-    <link rel="reset" href="reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="reset" href="assets/css/reset.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -18,51 +17,40 @@
 <body>
 
 <!--Header-->
-	<div class="hero-image">
-        <div class="logo">
-        	<div class="row">
-        		<div class="col-1">
-        			<i class="material-icons">&#xe5c3;</i>
-        		</div>
-        		<div class="col-2">
-	    			<img alt="logo" src="summer-header/images/logo.png">
-	    		</div>
-	    		<div class="col-3">
-	    			<span class="glyphicon glyphicon-search"></span>
-	    		</div>
-	    	</div>
-        </div>
-	    <div class="cart">
-	    	<h1>My Cart</h1>
-	    </div>
-	    <div class="title fade-in one">
-	    	<div class="summer-title">Summer
-				<div class="summer-title2">Title</div>
-			</div>
-	    	<!--<img alt="summertitle" src="/summer-header/images/summertitle.png">-->
-	    </div>
-	    <div class="button">
-   	   		 <button class="btn-video">Play the Video<span class="glyphicon">&#xe029;</span></button>
-   	    </div>
+	<div class="logo">
+        <div class="row">
+        	<div class="dropdown">
+	       		<button class="dropbtn">
+	       			<i class="material-icons">&#xe5c3;</i>
+	       		</button>
+	       		<div class="dropdown-content">
+	       			<a href="#">Women</a>
+	       			<a href="#">Men</a>
+	       			<a href="#">Films</a>
+	       		</div>
+       		</div>
+       		<div class="col-2">
+    			<img alt="logo" src="assets/images/logo.png">
+    		</div>
+	    	<div class="col-3">
+	   			<span class="glyphicon glyphicon-search"></span>
+	   		</div>
+	   	</div>
+	<div class="hero-image"></div>
+	<div class="shades">Shades</br>for Summer</div>
+	<div class="header-description">Spread the stoke and live the dream as a</br>part of the TGR Ambassador program.</div>
+	<button class="header-button">Shop Preformance Wear<i class="material-icons header-wear-arrow">&#xe5c8;</i></button>
+	<div class="shopping-cart"><span class="glyphicon"></span></div>
+	<img src="assets/images/videoreplace-other.jpg" class="hero-image-two" alt="Shades">
 	</div>
 <!--End Header-->
-
-<!--Infinite Scroller-->
-	<!--<div class="swiper-container">
-		<div class="swiper-wrapper">
-			<div class="swiper-slide">enjoy <a class="scroller">free shipping</a> on orders over $50</div>
-			<div class="swiper-slide">TGR apparel delivered every other month <a class="scroller">find out more</a></div>
-			<div class="swiper-slide">enjoy <a class="scroller">free shipping</a> on orders over $50</div>
-			<div class="swiper-slide">TGR apparel delivered every other month <a class="scroller">find out more</a></div>
-		</div>
-	</div>-->
 <!--End Infinite Scroller-->
 
 <!--Section 1-->
 	<div class="section-one-row">
 		<div class="scrollable">
 			<div class="col-md-5 scroller-element1">
-				<img src="summer-header/images/adventuremuch.jpg" alt="Ambassador program picture" class="element1-pic">
+				<img src="assets/images/adventuremuch.jpg" alt="Ambassador program picture" class="element1-pic">
 				<div class="element1-text">
 					<div class="adventure-text">Adventure Much?
 					</div> Spread the stoke and live the dream as part of the TGR </br>ambassador program.
@@ -70,24 +58,24 @@
 				</div>
 			</div>
 			<div class="col-md-3">
-				<img src="summer-header/images/@nickkalisz_DSC06789.jpg" alt="Shop Women" class="shop-women">
+				<img src="assets/images/@nickkalisz_DSC06789.jpg" alt="Shop Women" class="shop-women">
 				<div class="shop-women-text">Shop Women
 					<i class="material-icons shop-women-arrow">&#xe5c8;</i>
 				</div>
-				<img src="summer-header/images/shopm.jpg" alt="Shop Men" class="shop-men">
+				<img src="assets/images/shopm.jpg" alt="Shop Men" class="shop-men">
 				<div class="shop-men-text">Shop Men
 					<i class="material-icons shop-men-arrow">&#xe5c8;</i>
 				</div>
 			</div>
 			<div class="col-md-4 scroller-element4">
-				<img src="summer-header/images/IMG_8978.png" alt="Video" class="element4">
-				<i class="material-icons element4-arrow">play_arrow</i>
+				<img src="assets/images/IMG_8978.jpg" alt="hat" class="element4">
+				<!--<div class="element4-text">TGR Blog: Part 1</br>Shadow Mountain</div>-->
 			</div>
 
 <!--Repeated Section One-->
 
-			<div class="col-md-5 scroller-element1">
-				<img src="summer-header/images/adventuremuch.jpg" alt="Ambassador program picture" class="element1-pic">
+			<div class="col-md-5 scroller-element-2">
+				<img src="assets/images/adventuremuch.jpg" alt="Ambassador program picture" class="element1-pic">
 				<div class="element1-text">
 					<div class="adventure-text">Adventure Much?
 					</div> Spread the stoke and live the dream as part of the TGR </br>ambassador program.
@@ -95,18 +83,17 @@
 				</div>
 			</div>
 			<div class="col-md-3">
-				<img src="summer-header/images/@nickkalisz_DSC06789.jpg" alt="Shop Women" class="shop-women">
+				<img src="assets/images/@nickkalisz_DSC06789.jpg" alt="Shop Women" class="shop-women">
 				<div class="shop-women-text">Shop Women
 					<i class="material-icons shop-women-arrow">&#xe5c8;</i>
 				</div>
-				<img src="summer-header/images/shopm.jpg" alt="Shop Men" class="shop-men">
+				<img src="assets/images/shopm.jpg" alt="Shop Men" class="shop-men">
 				<div class="shop-men-text">Shop Men
 					<i class="material-icons shop-men-arrow">&#xe5c8;</i>
 				</div>
 			</div>
 			<div class="col-md-4 scroller-element4">
-				<img src="summer-header/images/IMG_8978.png" alt="Video" class="element4">
-				<i class="material-icons element4-arrow">play_arrow</i>
+				<img src="assets/images/IMG_8978.jpg" alt="Video" class="element4">
 			</div>
 		</div>
 	</div>
@@ -120,7 +107,7 @@
 		<div class="vertical-scroller-area">
 			<div class="vertical-scroller">
 				<div class="col-md-3 mostwanted-ad1">
-					<img src="summer-header/images/IAN.jpg" alt="leather patch ad" class="mostwanted-ad1-picture">
+					<img src="assets/images/IAN.jpg" alt="leather patch ad" class="mostwanted-ad1-picture">
 					<div class="headwear-caption-holder">
 						<div class="headwear">headwear</div>
 						<div class="headwear-caption">Leather Patch 5-Panel
@@ -131,7 +118,7 @@
 			   		</div>		
 				</div>
 				<div class="col-md-3 mostwanted-ad2">
-					<img src="summer-header/images/DSC00227.jpg" alt="Hydroflask Ad" class="accessoriesimg">
+					<img src="assets/images/DSC00227.jpg" alt="Hydroflask Ad" class="accessoriesimg">
 					<div class="headwear-caption-holder">
 						<div class="headwear">accessories</div>
 						<div class="headwear-caption">HydroFlask 32oz
@@ -142,7 +129,7 @@
 					</div>
 				</div>
 				<div class="col-md-3 hat1-ad">
-					<img src="summer-header/images/WP9A0791.jpg" alt="Hat Ad" class="hat1ad">
+					<img src="assets/images/WP9A0791.jpg" alt="Hat Ad" class="hat1ad">
 					<div class="headwear-caption-holder">
 						<div class="headwear">apparel</div>
 						<div class="headwear-caption">Ride the Tetons Tee
@@ -153,7 +140,7 @@
 			   		</div>		
 				</div>
 				<div class="col-md-3 hat2-ad">
-					<img src="summer-header/images/4045-BK-Lifestyleshot.jpg" alt="Hat Ad" class="hat2ad">
+					<img src="assets/images/4045-BK-Lifestyleshot.jpg" alt="Hat Ad" class="hat2ad">
 					<div class="headwear-caption-holder">
 						<div class="headwear">headwear</div>
 						<div class="headwear-caption">Alpine Cap
@@ -164,7 +151,7 @@
 			   		</div>		
 				</div>
 				<div class="col-md-3 socks-ad">
-					<img src="summer-header/images/ACCESSORIES.jpg" alt="Hat Ad" class="hat2ad">
+					<img src="assets/images/ACCESSORIES.jpg" alt="Hat Ad" class="hat2ad">
 					<div class="headwear-caption-holder">
 						<div class="headwear">apparel</div>
 						<div class="headwear-caption">Let's Go America Socks
@@ -175,7 +162,7 @@
 			   		</div>		
 				</div>
 				<div class="col-md-3 sweatshirt-ad">
-					<img src="/summer-header/images/738A0532.JPG" alt="Hat Ad" class="hat2ad">
+					<img src="assets/images/738A0532.JPG" alt="Hat Ad" class="hat2ad">
 					<div class="headwear-caption-holder">
 						<div class="headwear">headwear</div>
 						<div class="headwear-caption">Alpine Cap
@@ -194,13 +181,13 @@
 		</div>
 		<div class="col-md-6 water-ad">
 			<div class="gallery">
-				<img src="summer-header/images/hydro-black.jpg" alt="Hydroflask" class="gallery-image">
-				<img src="summer-header/images/hydro-red.jpg" alt="Hydroflask" class="gallery-image">
-				<img src="summer-header/images/hydro-flask-stainless-steel-vacuum-insulated-water-bottle-32-oz-wide-mouth-flex-cap-cobalt.jpg" alt="HydroFlask" class="gallery-image gallery-image-highlight">
-				<img src="summer-header/images/DSC00227.jpg" alt="Hydroflask Ad" class="gallery-image">
+				<img src="assets/images/hydro-black.jpg" alt="Hydroflask" class="gallery-image">
+				<img src="assets/images/hydro-red.jpg" alt="Hydroflask" class="gallery-image">
+				<img src="assets/images/hydro-flask-stainless-steel-vacuum-insulated-water-bottle-32-oz-wide-mouth-flex-cap-cobalt.jpg" alt="HydroFlask" class="gallery-image gallery-image-highlight">
+				<img src="assets/images/DSC00227.jpg" alt="Hydroflask Ad" class="gallery-image">
 			</div>	
 			<i class="material-icons gallery-arrow-left">arrow_back</i>
-			<img src="summer-header/images/hydro-flask-stainless-steel-vacuum-insulated-water-bottle-32-oz-wide-mouth-flex-cap-cobalt.jpg" alt="HydroFlask" class="main-gallery-image" id="main-gallery-image">
+			<img src="assets/images/hydro-flask-stainless-steel-vacuum-insulated-water-bottle-32-oz-wide-mouth-flex-cap-cobalt.jpg" alt="HydroFlask" class="main-gallery-image" id="main-gallery-image">
 			<i class="material-icons gallery-arrow">&#xe5c8;</i>
 			<div class="largeAd-title">32 oz HydroFlask</div>
 			<div class="largeAd-text">Spread the stoke and live the dream as a part of the TGR </br>Ambassador program.</div>
@@ -224,8 +211,8 @@
 		<p class="explore-nav1">TGR Shop Blog</p>
 		<p class="explore-nav2">Lookbooks</p>
 	</div>
-	<img src="summer-header/images/bikerbackground.JPG" alt="Background Image" class="explore-background">
-	<img src="summer-header/images/bikerimage.JPG" alt="Main Image" class="explore-image">
+	<img src="assets/images/bikerbackground.JPG" alt="Background Image" class="explore-background">
+	<img src="assets/images/bikerimage.JPG" alt="Main Image" class="explore-image">
 	<div class="sidebar">Lookbook
 		<div class="sidebar-title">Summer Styles: Part 1
 			<div class="year">2018</div>
@@ -246,7 +233,7 @@
 	<div class="scrollarea">
 		<div class="scrollable2">
 			<div class="col-md-2 scroll2-element1">
-				<img src="summer-header/images/DSC00181.jpg" alt="Hadley Hammer" class="scroll2-image">
+				<img src="assets/images/DSC00181.jpg" alt="Hadley Hammer" class="scroll2-image">
 				<div class="scroll2-background"></div>
 				<div class="scroll2-name">Hadley</br>Hammer</div>
 				<button class="pro1">View Athlete Profile</button>
@@ -254,7 +241,7 @@
 			</div>
 
 			<div class="col-md-2 scroll2-element2">
-				<img src="summer-header/images/Ian_McIntosh_AK_2016__0222.jpg" alt="Ian McIntosh" class="scroll2-image">
+				<img src="assets/images/Ian_McIntosh_AK_2016__0222.jpg" alt="Ian McIntosh" class="scroll2-image">
 				<div class="scroll2-background"></div>
 				<div class="scroll2-name">Ian</br>McIntosh</div>
 				<button class="pro1">View Athlete Profile</button>
@@ -262,7 +249,7 @@
 			</div>
 
 			<div class="col-md-2 scroll2-element3">
-				<img src="summer-header/images/Sage_2015_414.jpg" alt="Sage" class="scroll2-image">
+				<img src="assets/images/Sage_2015_414.jpg" alt="Sage" class="scroll2-image">
 				<div class="scroll2-background"></div>
 				<div class="scroll2-name">Sage</br>Name</div>
 				<button class="pro1">View Athlete Profile</button>
@@ -270,7 +257,7 @@
 			</div>
 
 			<div class="col-md-2 scroll2-element4">
-				<img src="summer-header/images/DSC00181.jpg" alt="Hadley Hammer" class="scroll2-image">
+				<img src="assets/images/DSC00181.jpg" alt="Hadley Hammer" class="scroll2-image">
 				<div class="scroll2-background"></div>
 				<div class="scroll2-name">Hadley</br>Hammer</div>
 				<button class="pro1">View Athlete Profile</button>
@@ -278,7 +265,7 @@
 			</div>
 
 			<div class="col-md-2 scroll2-element5">
-				<img src="summer-header/images/Ian_McIntosh_AK_2016__0222.jpg" alt="Ian McIntosh" class="scroll2-image">
+				<img src="assets/images/Ian_McIntosh_AK_2016__0222.jpg" alt="Ian McIntosh" class="scroll2-image">
 				<div class="scroll2-background"></div>
 				<div class="scroll2-athlete">Snow Athlete</div>
 				<div class="scroll2-name">Ian</br>McIntosh</div>
@@ -287,7 +274,7 @@
 			</div>
 
 			<div class="col-md-2 scroll2-element6">
-				<img src="summer-header/images/Sage_2015_414.jpg" alt="Sage" class="scroll2-image">
+				<img src="assets/images/Sage_2015_414.jpg" alt="Sage" class="scroll2-image">
 				<div class="scroll2-background"></div>
 				<div class="scroll2-name">Sage</br>Name</div>
 				<button class="pro1">View Athlete Profile</button>
@@ -307,36 +294,36 @@
 	</div>
 	<div class="posts-container">
 		<div class="col-sm-4 socialpost">
-			<img src="summer-header/images/instagram-color.png" alt="Instagram" class="instagramincolor">
-			<img src="summer-header/images/tim-profile.jpg" alt="Tim Durtschi" class="social-profile">
+			<img src="assets/images/instagram-color.png" alt="Instagram" class="instagramincolor">
+			<img src="assets/images/tim-profile.jpg" alt="Tim Durtschi" class="social-profile">
 			<div class="social-name">Tim Durtschi</div>
 			<div class="social-posted">posted a photo</div>
 			<div class="social-date">02.16.2018</div>
-			<img src="summer-header/images/tim-photo.png" alt="Social post" class="social-picture">
+			<img src="assets/images/tim-photo.png" alt="Social post" class="social-picture">
 		</div>
 		<div class="col-sm-4 socialpost">
-			<img src="summer-header/images/facebook-color.png" alt="Facebook" class="facebookincolor">
-			<img src="summer-header/images/jeremy-profile.jpg" alt="Jeremy Jones" class="social-profile">
+			<img src="assets/images/facebook-color.png" alt="Facebook" class="facebookincolor">
+			<img src="assets/images/jeremy-profile.jpg" alt="Jeremy Jones" class="social-profile">
 			<div class="social-name">Jeremy Jones</div>
 			<div class="social-posted">posted a photo</div>
 			<div class="social-date">02.04.2018</div>
-			<img src="summer-header/images/jeremy-post.jpg" alt="Jeremy's Post" class="social-picture">
+			<img src="assets/images/jeremy-post.jpg" alt="Jeremy's Post" class="social-picture">
 		</div>
 		<div class="col-sm-4 socialpost">
-			<img src="summer-header/images/facebook-color.png" alt="Facebook" class="facebookincolor">
-			<img src="summer-header/images/johnny-profile.jpg" alt="Johnny Collinson" class="social-profile">
+			<img src="assets/images/facebook-color.png" alt="Facebook" class="facebookincolor">
+			<img src="assets/images/johnny-profile.jpg" alt="Johnny Collinson" class="social-profile">
 			<div class="social-name">Johnny Collinson</div>
 			<div class="social-posted">posted a photo</div>
 			<div class="social-date">02.06.2018</div>
-			<img src="summer-header/images/johnny-post.jpg" alt="Johnny's Post" class="social-picture">
+			<img src="assets/images/johnny-post.jpg" alt="Johnny's Post" class="social-picture">
 		</div>
 		<div class="col-sm-4 socialpost">
-			<img src="summer-header/images/instagram-color.png" alt="Instagram" class="instagramincolor">
-			<img src="summer-header/images/angel-profile.jpg" alt="Angel Collinson" class="social-profile">
+			<img src="assets/images/instagram-color.png" alt="Instagram" class="instagramincolor">
+			<img src="assets/images/angel-profile.jpg" alt="Angel Collinson" class="social-profile">
 			<div class="social-name">Angel Collinson</div>
 			<div class="social-posted">posted a photo</div>
 			<div class="social-date">01.14.2018</div>
-			<img src="summer-header/images/angel-picture.jpg" alt="Angel's Post" class="social-picture">
+			<img src="assets/images/angel-picture.jpg" alt="Angel's Post" class="social-picture">
 		</div>
 	</div>
 <!--End Section Five-->
@@ -349,11 +336,11 @@
 			<div class="days-of-week">weekdays&nbsp;&nbsp;9am - 6pm</br>saturday&nbsp;&nbsp;12pm - 6pm</br>sunday&nbsp;&nbsp;&nbsp; closed</div>
 		</div>
 		<div class="col-md-4">
-			<img src="summer-header/images/logowhite.png" alt="Footer Logo" class="footer-logo">
-			<img src="summer-header/images/instagram.png" alt="Instagram" class="instagram">
-			<img src="summer-header/images/facebook-logo.png" alt="Facebook" class="facebook">
-			<img src="summer-header/images/vimeo-logo.png" alt="Vimeo" class="vimeo">
-			<img src="summer-header/images/twitter-logo-silhouette.png" alt="Twitter" class="twitter">
+			<img src="assets/images/logowhite.png" alt="Footer Logo" class="footer-logo">
+			<img src="assets/images/instagram.png" alt="Instagram" class="instagram">
+			<img src="assets/images/facebook-logo.png" alt="Facebook" class="facebook">
+			<img src="assets/images/vimeo-logo.png" alt="Vimeo" class="vimeo">
+			<img src="assets/images/twitter-logo-silhouette.png" alt="Twitter" class="twitter">
 		</div>
 		<div class="col-md-4">
 			<div class="phone-number two">(307)734-8192</div>
@@ -366,7 +353,7 @@
 <!--JQuery-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.2/js/swiper.js"></script>
-	<script title="text/javascript" src="jQuery-1.0.custom.js"></script>
+	<script title="text/javascript" src="assets/js/main.js"></script>
 <!--End JQuery-->
 
 
